# realworld-starter-kit

./: .env.example  .gitignore  Cargo.toml  index.html
src/: article.rs  article_comment_list.rs  article_comment_list_item.rs  article_comments.rs  editor.rs  helper.rs  home.rs  home_article_list_item.rs  login.rs  main.rs  navigation.rs  profile.rs  register.rs  setting.rs  types.rs
src/components/: article_comment_list.rs  article_comment_list_item.rs  article_list_item.rs  footer.rs  mod.rs  navigation.rs
src/pages/: article.rs  editor.rs  home.rs  login.rs  mod.rs  profile.rs  register.rs  setting.rs
src/types/: data_beans.rs  mod.rs
